setup/webadmin_svc_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: webadmin
  labels:
    app: webadmin
spec:
  selector:
    app: webadmin
  ports:
  - port: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webadmin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # ingressClassName: webadmin-ingress
  rules:
  - http:
      paths:
      - path: /webadmin
        pathType: Prefix
        backend:
          service:
            name: webadmin
            port:
              number: 5000
